Fixed connect with us alignment

--- a/src/app/modules/contact-us/contact-us.component.scss
+++ b/src/app/modules/contact-us/contact-us.component.scss
@@ -1,4 +1,4 @@
-@import "src/variables.scss";
+@import 'src/variables.scss';
 
 h2,
 h3,
@@ -7,7 +7,6 @@ p {
   //font-family: "Montserrat", sans-serif;
   margin: 0;
 }
-
 
 .grey-row {
   width: 100%;
@@ -28,30 +27,30 @@ p {
   height: 100%;
 }
 
- 
 .black-panel {
-    width: $black-panel-width;
-    margin-right: $black-panel-offset-right;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.62);
-    padding: 0 16px;
+  width: $black-panel-width;
+  margin-right: $black-panel-offset-right;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.62);
+  padding: 0 16px;
 }
 
 .map {
-    width: 100%;
+  width: 100%;
 }
 
 .icon {
-    width: 40px;
-    vertical-align: middle;
-    margin-right : 12px;
+  width: 40px;
+  object-fit: contain;
+  vertical-align: middle;
+  margin-right: 12px;
 }
 
 .gold {
-    color: gold;
+  color: gold;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
